# HDDT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build.sh  cmake_install.cmake  executor.sh  fetchMnist.sh  setup.py
.github/workflows/: code-format-check.yml  spellcheck.yml
apps/coll_app/: CMakeLists.txt  main.cpp
apps/executor_app/: CMakeLists.txt  main.cpp
apps/python_app/: test.py
apps/rdma_app/: CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  main.cpp  mem.cpp  rdma_app  server.cpp
apps/simple_inference/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  simple_inference
apps/torch_app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  torch_app
apps/train_cnn/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  train_cnn
cmake/: FindCuda.cmake  FindMPI.cmake  FindNeuware.cmake  FindPyTorch.cmake  FindRdma.cmake  FindRocm.cmake  fetch_mnist.cmake
docs/: howToDev.md  mpirun.md
docs/proposal/: communicator.md  template.md
hddt/: __init__.py
include/: coll.h  coll_algorithm.h  executor.h  hddt.h  hddt.hpp  mem.h  net.h  net.hpp  p2p.h
python/: hddt_py.cpp
src/: driver.cpp  executor.cpp  log.cpp  test_py.cpp
src/coll/: coll.cpp  coll_algorithm.cpp
src/mem/: cuda_memory.cpp  hddt_memory.cpp  host_memory.cpp  neuware_memory.cpp  rocm_memory.cpp
src/net/: net.cpp  rdmaCommunictor.cpp  rdma_communictor.cpp  tcp_communictor.cpp
src/net/cuda/: ec_cuda_reduce_ops.h  net_cuda_copy.cu
tests/: CMakeLists.txt  CTestTestfile.cmake  HDDT_test  Makefile  cmake_install.cmake  cuda_memory_test.cpp  hddt_memory_test.cpp  host_memory_test.cpp
